--- a/CodeOnlyFX/CodeOnlyFX.vcxproj.filters
+++ b/CodeOnlyFX/CodeOnlyFX.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClInclude Include="include\cofx\Graphics\Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\cofx\Graphics\SpriteBatch.h">
+    <ClInclude Include="include\cofx\Graphics\Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\cofx\Graphics\Texture.h">
@@ -1026,6 +1026,9 @@
     <ClInclude Include="include\glm\vector_relational.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\cofx\Graphics\SpriteSheet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="include\cofx\Core\Assets.inl">
@@ -1462,13 +1465,16 @@
     <ClCompile Include="src\cofx\Graphics\Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\cofx\Graphics\SpriteBatch.cpp">
+    <ClCompile Include="src\cofx\Graphics\Renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\cofx\Graphics\Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="include\glm\detail\glm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\cofx\Graphics\SpriteSheet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
