--- a/CodeOnlyFX/CodeOnlyFX.vcxproj
+++ b/CodeOnlyFX/CodeOnlyFX.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="include\cofx\Core\ContextSettings.h" />
     <ClInclude Include="include\cofx\Core\Debug.h" />
     <ClInclude Include="include\cofx\Core\Window.h" />
+    <ClInclude Include="include\cofx\Graphics\Animation.h" />
     <ClInclude Include="include\cofx\Graphics\Color.h" />
     <ClInclude Include="include\cofx\Graphics\Shader.h" />
     <ClInclude Include="include\cofx\Graphics\Renderer.h" />
@@ -626,6 +627,7 @@
     <ClCompile Include="src\cofx\Core\Assets.cpp" />
     <ClCompile Include="src\cofx\Core\Debug.cpp" />
     <ClCompile Include="src\cofx\Core\Window.cpp" />
+    <ClCompile Include="src\cofx\Graphics\Animation.cpp" />
     <ClCompile Include="src\cofx\Graphics\Shader.cpp" />
     <ClCompile Include="src\cofx\Graphics\Renderer.cpp" />
     <ClCompile Include="src\cofx\Graphics\Texture.cpp" />
