--- a/CodeOnlyFX/CodeOnlyFX.vcxproj.filters
+++ b/CodeOnlyFX/CodeOnlyFX.vcxproj.filters
@@ -1023,6 +1023,9 @@
     <ClInclude Include="include\cofx\Graphics\Animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\cofx\Graphics\Text.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="include\cofx\Core\Assets.inl">
@@ -1466,6 +1469,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\cofx\Graphics\Animation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\cofx\Graphics\Text.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
