(feat) Graphics::Image - Texture is not overused now.

--- a/CodeOnlyFX/CodeOnlyFX.vcxproj
+++ b/CodeOnlyFX/CodeOnlyFX.vcxproj
@@ -192,9 +192,12 @@
     <ClInclude Include="include\cofx\Core\Debug.h" />
     <ClInclude Include="include\cofx\Core\Window.h" />
     <ClInclude Include="include\cofx\Graphics\Color.h" />
+    <ClInclude Include="include\cofx\Graphics\Image.h" />
     <ClInclude Include="include\cofx\Graphics\Shader.h" />
     <ClInclude Include="include\cofx\Graphics\Renderer.h" />
     <ClInclude Include="include\cofx\Graphics\Texture.h" />
+    <ClInclude Include="include\cofx\System\Audio.h" />
+    <ClInclude Include="include\cofx\System\Input.h" />
     <ClInclude Include="include\cofx\System\Timer.h" />
     <ClInclude Include="include\glm\common.hpp" />
     <ClInclude Include="include\glm\detail\compute_common.hpp" />
@@ -627,6 +630,8 @@
     <ClCompile Include="src\cofx\Graphics\Shader.cpp" />
     <ClCompile Include="src\cofx\Graphics\Renderer.cpp" />
     <ClCompile Include="src\cofx\Graphics\Texture.cpp" />
+    <ClCompile Include="src\cofx\System\Audio.cpp" />
+    <ClCompile Include="src\cofx\System\Input.cpp" />
     <ClCompile Include="src\cofx\System\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
