(feat) Re-designed Graphics::Renderer. I'ma test custom shaders and add Text renderer next time.

--- a/CodeOnlyFX/CodeOnlyFX.vcxproj
+++ b/CodeOnlyFX/CodeOnlyFX.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="include\cofx\Core\Debug.h" />
     <ClInclude Include="include\cofx\Core\Window.h" />
     <ClInclude Include="include\cofx\Graphics\Color.h" />
+    <ClInclude Include="include\cofx\Graphics\Drawable.h" />
     <ClInclude Include="include\cofx\Graphics\Image.h" />
     <ClInclude Include="include\cofx\Graphics\Shader.h" />
     <ClInclude Include="include\cofx\Graphics\Renderer.h" />
