(feat) Re-designed Input::Keyboard to act more accurate. (feat) Compacted rendering function in Graphics::Texture (sad) Try to set custom shader but I fucked up. I always fuck up something.

--- a/DemoGame/DemoGame.vcxproj.filters
+++ b/DemoGame/DemoGame.vcxproj.filters
@@ -21,5 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\assets.json" />
+    <None Include="Assets\Shaders\reversed.frag" />
+    <None Include="Assets\Shaders\reversed.vert" />
   </ItemGroup>
 </Project>
