--- a/DemoGame/DemoGame.vcxproj.filters
+++ b/DemoGame/DemoGame.vcxproj.filters
@@ -22,5 +22,6 @@
   <ItemGroup>
     <None Include="Assets\assets.json" />
     <None Include="Assets\Shaders\reversed.frag" />
+    <None Include="Assets\Shaders\reversed.vert" />
   </ItemGroup>
 </Project>
