--- a/CodeOnlyFX/CodeOnlyFX.vcxproj
+++ b/CodeOnlyFX/CodeOnlyFX.vcxproj
@@ -112,7 +112,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;freetype.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>$(ProjectDir)external\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -136,13 +136,19 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;freetype.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>$(ProjectDir)external\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="external\include\AL\al.h" />
+    <ClInclude Include="external\include\AL\alc.h" />
+    <ClInclude Include="external\include\AL\alext.h" />
+    <ClInclude Include="external\include\AL\efx-creative.h" />
+    <ClInclude Include="external\include\AL\efx-presets.h" />
+    <ClInclude Include="external\include\AL\efx.h" />
     <ClInclude Include="external\include\freetype\config\ftconfig.h" />
     <ClInclude Include="external\include\freetype\config\ftheader.h" />
     <ClInclude Include="external\include\freetype\config\ftmodule.h" />
@@ -242,6 +248,8 @@
     <ClInclude Include="external\include\rapidjson\uri.h" />
     <ClInclude Include="external\include\rapidjson\writer.h" />
     <ClInclude Include="external\include\stb_image.h" />
+    <ClInclude Include="include\cofx\Audio\SoundBuffer.h" />
+    <ClInclude Include="include\cofx\Audio\SoundPlayer.h" />
     <ClInclude Include="include\cofx\cofx.hpp" />
     <ClInclude Include="include\cofx\Core\Assets.h" />
     <ClInclude Include="include\cofx\Core\Debug.h" />
@@ -256,7 +264,6 @@
     <ClInclude Include="include\cofx\Graphics\TextRenderer.h" />
     <ClInclude Include="include\cofx\Graphics\Texture.h" />
     <ClInclude Include="include\cofx\Input\Keyboard.h" />
-    <ClInclude Include="include\cofx\System\Audio.h" />
     <ClInclude Include="include\cofx\System\Timer.h" />
     <ClInclude Include="external\include\glm\common.hpp" />
     <ClInclude Include="external\include\glm\detail\compute_common.hpp" />
@@ -689,15 +696,16 @@
     <ClCompile Include="src\cofx\Graphics\Shader.cpp" />
     <ClCompile Include="src\cofx\Graphics\SpriteRenderer.cpp" />
     <ClCompile Include="src\cofx\Graphics\Text.cpp" />
+    <ClCompile Include="src\cofx\Graphics\TextRenderer.cpp" />
     <ClCompile Include="src\cofx\Graphics\Texture.cpp" />
     <ClCompile Include="src\cofx\Input\Keyboard.cpp" />
-    <ClCompile Include="src\cofx\System\Audio.cpp" />
     <ClCompile Include="src\cofx\System\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="external\lib\freetype.lib" />
     <Library Include="external\lib\glew32s.lib" />
     <Library Include="external\lib\glfw3.lib" />
+    <Library Include="external\lib\OpenAL32.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
